force-app/main/default/objects/VRT_Tarifa__c/VRT_Tarifa__c.object-meta.xml
<CustomObject>
    <description>Tarifa que se aplica al alquiler en función del tipo de vehículo, temporada, descuentos y penalizaciones</description>
    <label>Tarifa</label>
    <nameField>
        <label>Tarifa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarifas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>