force-app/main/default/objects/VRT_Tarifa__c/fields/VRT_DIV_PricePerDay__c.field-meta.xml
<CustomField>
    <fullName>VRT_DIV_PricePerDay__c</fullName>
    <description>Precio base por día</description>
    <label>Precio por Día</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>