force-app/main/default/objects/VRT_Tarifa__c/fields/VRT_FLG_Active__c.field-meta.xml
<CustomField>
    <fullName>VRT_FLG_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si la tarifa está activa</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>