force-app/main/default/objects/VRT_Tarifa__c/fields/VRT_SEL_Season__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Season__c</fullName>
    <description>Temporada comercial</description>
    <label>Temporada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>