force-app/main/default/objects/VRT_Tarifa__c/fields/VRT_SEL_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_VehicleType__c</fullName>
    <description>Tipo de vehículo al que aplica</description>
    <label>Tipo Vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>coche</fullName>
            </value>
            <value>
                <fullName>moto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>