force-app/main/default/objects/VRT_Tarifa__c/listViews/Todas_las_Tarifas.listView-meta.xml
<ListView>
    <fullName>Todas_las_Tarifas</fullName>
    <columns>NAME</columns>
    <columns>VRT_SEL_Season__c</columns>
    <columns>VRT_SEL_VehicleType__c</columns>
    <columns>VRT_DIV_PricePerDay__c</columns>
    <columns>VRT_FLG_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Tarifas</label>
</ListView>